--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 	<title>List of Quotes</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
 		Hello World
