--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -5,6 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
-		Hello World
+	<h1>List of Quotes in <i>In the Lake of the Woods</i></h1>
+	<div id="magic">
+		<h2>He's a sorcerer; he knows how to disappear</h2>
+	</div>
 	</body>
 </html>
