--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -6,8 +6,19 @@
 	</head>
 	<body>
 	<h1>List of Quotes in <i>In the Lake of the Woods</i></h1>
-	<div id="magic">
+	<div>
+	<div class="generic" id="magic">
 		<h2>He's a sorcerer; he knows how to disappear</h2>
+	</div>
+	<div class="generic" id="details">
+		<h2>He's a sorcerer; he knows how to disappear</h2>
+	</div>
+	<div class="generic" id="evidence">
+		<h2>He's a sorcerer; he knows how to disappear</h2>
+	</div>
+	<div class="generic" id="people">
+		<h2>He's a sorcerer; he knows how to disappear</h2>
+	</div>
 	</div>
 	</body>
 </html>
