--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -6,19 +6,17 @@
 	</head>
 	<body>
 	<h1>List of Quotes in <i>In the Lake of the Woods</i></h1>
-	<div>
 	<div class="generic" id="magic">
 		<h2>He's a sorcerer; he knows how to disappear</h2>
 	</div>
-	<div class="generic" id="details">
-		<h2>He's a sorcerer; he knows how to disappear</h2>
-	</div>
+	<span class="generic" id="details">
+		<h2>Details on how they could have disappeared</h2>
+	</span>
 	<div class="generic" id="evidence">
-		<h2>He's a sorcerer; he knows how to disappear</h2>
+		<h2>Why they wanted to run away</h2>
 	</div>
-	<div class="generic" id="people">
-		<h2>He's a sorcerer; he knows how to disappear</h2>
-	</div>
-	</div>
+	<span class="generic" id="people">
+		<h2>people were in on it</h2>
+	</span>
 	</body>
 </html>
