--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -6,15 +6,15 @@
 	</head>
 	<body>
 	<h1>List of Quotes in <i>In the Lake of the Woods</i></h1>
-	<div class="generic" id="magic">
+	<span class="generic" id="magic">
 		<h2>He's a sorcerer; he knows how to disappear</h2>
-	</div>
+	</span>
 	<span class="generic" id="details">
 		<h2>Details on how they could have disappeared</h2>
-	</span>
-	<div class="generic" id="evidence">
+	</span><br>
+	<span class="generic" id="evidence">
 		<h2>Why they wanted to run away</h2>
-	</div>
+	</span>
 	<span class="generic" id="people">
 		<h2>people were in on it</h2>
 	</span>
