--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 	<h1>List of Quotes in <i>In the Lake of the Woods</i></h1>
+	<div>
 	<span class="generic" id="magic">
 		<h2>He's a sorcerer; he knows how to disappear</h2>
 	</span>
@@ -18,5 +19,6 @@
 	<span class="generic" id="people">
 		<h2>people were in on it</h2>
 	</span>
+	</div>
 	</body>
 </html>
