--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -9,14 +9,12 @@
 	<div>
 	<span class="generic" id="magic">
 		<h2>He's a sorcerer; he knows how to disappear</h2>
-	</span>
-	<span class="generic" id="details">
+	</span><span class="generic" id="details">
 		<h2>Details on how they could have disappeared</h2>
-	</span><br>
+	</span>
 	<span class="generic" id="evidence">
 		<h2>Why they wanted to run away</h2>
-	</span>
-	<span class="generic" id="people">
+	</span><span class="generic" id="people">
 		<h2>people were in on it</h2>
 	</span>
 	</div>
