--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 	<h1>List of Quotes in <i>In the Lake of the Woods</i></h1>
-	<table>
+	<table id="grid">
 		<tr><td class="generic" id="magic">
 			<h2>He's a sorcerer; he knows how to disappear</h2>
 		</td><td class="generic" id="details">
