--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -3,8 +3,9 @@
 	<head>
 	<title>List of Quotes</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<script src="scriptystuff.js" type="text/javascript"></script>
 	</head>
-	<body>
+	<body onload="doStuff()">
 	<h1>List of Quotes in <i>In the Lake of the Woods</i></h1>
 	<table id="grid">
 		<tr><td class="generic" id="magic">
