--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -5,13 +5,21 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<script src="scriptystuff.js" type="text/javascript"></script>
 	</head>
-	<body onload="doStuff()">
+	<body>
 	<h1>List of Quotes in <i>In the Lake of the Woods</i></h1>
 	<table id="grid">
 		<tr><td class="generic" id="magic">
 			<h2>He's a sorcerer; he knows how to disappear</h2>
-		</td><td class="generic" id="details">
+			<div class="expandable">
+				<p>Chapter 24 page 262: Exhibit Eight: john wades box of tricks: Invisible ink john could have wrote notes to people saying what was going to happen. he could have told kathy to meet her at this place at this time. 
+</p>
+			</div>
+		</td><td class="expanded" id="details">
 			<h2>Details on how they could have disappeared</h2>
+			<div class="expandable">
+				<p>Chapter 31:(Page 301) Maybe they wrapped themselves in blankets and fell asleep and woke up happy, and maybe in the morning they set a bearing north toward Kenora, or west toward Winnipeg, where they would have ditched the Chris Craft and made their way on foot to a bus station or to a small private airport 
+</p>
+			</div>
 		</td></tr>
 		<tr><td class="generic" id="evidence">
 			<h2>Why they wanted to run away</h2>
