--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -6,15 +6,15 @@
 	<script src="scriptystuff.js" type="text/javascript"></script>
 	</head>
 	<body>
-	Version 1.3.1
+	Version 1.3.2
 	<h1>List of Quotes in <i>In the Lake of the Woods</i></h1>
 	<table id="grid">
-		<tr><td><div class="generic" id="magic" onclick="toggle('magic')">
-			<h2>He's a sorcerer; he knows how to disappear</h2>
-			<div class="expandable">
+		<tr><td class="generic" id="magic" onclick="toggle('magic')">
+			<h2 onclick="toggle('magic')">He's a sorcerer; he knows how to disappear</h2>
+			<div class="expandable" onclick="toggle('magic')">
 				<p>Chapter 24 page 262: Exhibit Eight: john wades box of tricks: Invisible ink john could have wrote notes to people saying what was going to happen. he could have told kathy to meet her at this place at this time. 
 </p>
-			</div></td>
+			</div>
 		</td><td class="expanded" id="details">
 			<h2>Details on how they could have disappeared</h2>
 			<div class="expandable">
