--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<script src="scriptystuff.js" type="text/javascript"></script>
 	</head>
-	<body onload="setupQuotes()">
-	Version 1.0.5.3
+	<body onload="setupQuotes();setVersion()">
+	<span id="versionCode"></span>
 	<h1>List of Quotes in <i>In the Lake of the Woods</i></h1>
 	<table id="grid">
 		<tr><td class="generic" id="magic" onclick="toggle('magic')">
