--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -4,6 +4,7 @@
 	<title>List of Quotes</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<script src="scriptystuff.js" type="text/javascript"></script>
+	<script src="version.js" type="text/javascript"></script>
 	</head>
 	<body onload="setupQuotes();setVersion()">
 	<span id="versionCode"></span>
