--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -6,7 +6,7 @@
 	<script src="scriptystuff.js" type="text/javascript"></script>
 	<script src="version.js" type="text/javascript"></script>
 	</head>
-	<body onload="setupQuotes();setVersion()">
+	<body onload="setVersion();setupQuotes()">
 	<span id="versionCode"></span>
 	<h1>List of Quotes in <i>In the Lake of the Woods</i></h1>
 	<table id="grid">
