--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -13,26 +13,26 @@
 		<tr><td class="generic" id="magic" onclick="toggle('magic')">
 			<h2>He's a sorcerer; he knows how to disappear</h2>
 			<div class="expandable">
-				<p onclick="toggleQ(this)">Chapter 24 page 262: Exhibit Eight: john wades box of tricks: Invisible ink john could have wrote notes to people saying what was going to happen. he could have told kathy to meet her at this place at this time. 
+				<p>Chapter 24 page 262: Exhibit Eight: john wades box of tricks: Invisible ink john could have wrote notes to people saying what was going to happen. he could have told kathy to meet her at this place at this time. 
 </p>
 			</td>
 		</td><td class="generic" id="details" onclick="toggle('details')">
 			<h2>Details on how they could have disappeared</h2>
 			<div class="expandable">
-				<p onclick="toggleQ(this)">Chapter 31:(Page 301) Maybe they wrapped themselves in blankets and fell asleep and woke up happy, and maybe in the morning they set a bearing north toward Kenora, or west toward Winnipeg, where they would have ditched the Chris Craft and made their way on foot to a bus station or to a small private airport 
+				<p>Chapter 31:(Page 301) Maybe they wrapped themselves in blankets and fell asleep and woke up happy, and maybe in the morning they set a bearing north toward Kenora, or west toward Winnipeg, where they would have ditched the Chris Craft and made their way on foot to a bus station or to a small private airport 
 </p>
 			</div>
 		</td></tr>
 		<tr><td class="generic" id="evidence" onclick="toggle('evidence')">
 			<h2>Why they wanted to run away</h2>
 			<div class="expandable">
-				<p onclick="toggleQ(this)">Page265 [B. Tavern’s] longing to vanish, in death, without a trace and to return to the elements from which he came echoes his lifelong hunger for anonymity, for disappearing without a name, or with a fictitious name, so that his true identity would be lost forever. The life of a pseudonym is the life of a dead man, of one who does not exist. - Karl S. Guthke (B. Tavern) 
+				<p>Page265 [B. Tavern’s] longing to vanish, in death, without a trace and to return to the elements from which he came echoes his lifelong hunger for anonymity, for disappearing without a name, or with a fictitious name, so that his true identity would be lost forever. The life of a pseudonym is the life of a dead man, of one who does not exist. - Karl S. Guthke (B. Tavern) 
 John wanted to vanish he ran away disappearing leaving everything behind out of the blue. He did not want to exist after he lost the election. 
 </p></div>
 		</td><td class="generic" id="people" onclick="toggle('people')">
 			<h2>people were in on it</h2>
 			<div class="expandable">
-				<p onclick="toggleQ(this)">Page265 [B. Tavern’s] longing to vanish, in death, without a trace and to return to the elements from which he came echoes his lifelong hunger for anonymity, for disappearing without a name, or with a fictitious name, so that his true identity would be lost forever. The life of a pseudonym is the life of a dead man, of one who does not exist. - Karl S. Guthke (B. Tavern) 
+				<p>Page265 [B. Tavern’s] longing to vanish, in death, without a trace and to return to the elements from which he came echoes his lifelong hunger for anonymity, for disappearing without a name, or with a fictitious name, so that his true identity would be lost forever. The life of a pseudonym is the life of a dead man, of one who does not exist. - Karl S. Guthke (B. Tavern) 
 John wanted to vanish he ran away disappearing leaving everything behind out of the blue. He did not want to exist after he lost the election. 
 </p></div>
 		</td>
