--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -3,8 +3,9 @@
 	<head>
 	<title>List of Quotes</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<script src="scriptystuff.js" type="text/javascript"></script>
-	<script src="version.js" type="text/javascript"></script>
+	<link rel="stylesheet" type="text/css" href="animations.css">
+	<script type="text/javascript" src="scriptystuff.js" ></script>
+	<script type="text/javascript" src="version.js"></script>
 	</head>
 	<body onload="setVersion();setupQuotes()">
 	<span id="versionCode"></span>
