--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -20,8 +20,12 @@
 		</td><td class="genericNew" id="details" onclick="toggle('details')">
 			<h2>Details on how they could have disappeared</h2>
 			<div class="expandable">
-				<p>Chapter 31:(Page 301)  Maybe they wrapped themselves in blankets and fell asleep and woke up happy, and maybe in the morning they set a bearing north toward Kenora, or west toward Winnipeg, where they would have ditched the Chris Craft and made their way on foot to a bus station or to a small private airport 
-</p>
+				<p>Chapter 31:(Page 301)  Maybe they wrapped themselves in blankets and fell asleep and woke up happy, and maybe in the morning they set a bearing north toward Kenora, or west toward Winnipeg, where they would have ditched the Chris Craft and made their way on foot to a bus station or to a small private airport</p>
+				<p>Ch26 page 269: He [John] went to the files and dug out a thick folder of morning reports for Charlie Company. Over the next two hours he made the necessary changes, mostly retyping, some scissors work, removing his name from each document and carefully tidying up the numbers.\n-disappearing act, happened once, could happen again</p>
+				<p>page 249: “Later, when he looked back, the yellow cabin was gone. But even then, in his mind’s eye, he could see a man and a woman lying quietly on a porch in the dense night fog…{This man and woman being John and Kathy}... and soon the fog was all around them and inside them and they were swallowed up and gone.” Magicians often use smoke (fog works too) to disappear. Magicians also often imagine their trick before it happens so they can be extra sure everything goes as planned. He was imagining their vanishing act to make sure it happened right.</p>
+				<p>Ch 12 page 94 “He actually <i>thought</i> of himself as a Sorcerer, that’s how it seemed to me, and Kathy was his main audience.  I can’t see how she put up with it. Maybe she hoped he’d pull off a real miracle or something.  For her own life, I mean.  I guess sometimes my sister thought of him as a Sorcerer too. - Patricia Hood</p>
+				<p>Chapter 30 Page 296:...Number four, the man was a magician. Tried to wipe his name off the Charlie Company rolls, tried to vanish himself and damn near did it...(Anthony L. (Tony) Carbo)</p>
+				<p>Ch12 page 97 \“In every trick there are two carefully thought out lines-the way it looks and the way it is.  The success of your work depends upon your understanding the relationship of these lines.\” -Robert Parrish (The Magician’s Handbook)</p>
 			</div>
 		</td></tr>
 		<tr><td class="genericNew" id="evidence" onclick="toggle('evidence')">
