--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -25,21 +25,29 @@
 			<h2>Details on how they could have disappeared</h2>
 			<div class="expandable">
 				<p>Chapter 31:(Page 301)  Maybe they wrapped themselves in blankets and fell asleep and woke up happy, and maybe in the morning they set a bearing north toward Kenora, or west toward Winnipeg, where they would have ditched the Chris Craft and made their way on foot to a bus station or to a small private airport</p>
-				
+				<p>lake of the Woods, scenic lake astride the Canadian–United States boundary where the provinces of Ontario and Manitoba and the state of Minnesota meet. Relatively shallow and irregular in shape, it is 70 miles (110 km) long and up to 60 miles (95 km) wide and has an area of 1,727 square miles (4,472 square km). The lake has an estimated 25,000 miles (40,000 km) of shoreline and more than 14,000 islands. Fed from the southeast by the Rainy River, the lake drains northwestward through the Winnipeg River into Lake Winnipeg. Its elevation is 1,060 feet (323 m) above sea level, and the drainage area is 27,170 square miles (70,370 square km).</p>
+				<p>Chapter 31:(Page 301) Maybe they wrapped themselves in blankets and fell asleep and woke up happy, and maybe in the morning they set a bearing north toward Kenora, or west toward Winnipeg, where they would have ditched the Chris Craft and made their way on foot to a bus station or to a small private airport</p>
+				<p>Ch28 page 276 talks about how nice and expensive the boat was. It seems it would be good for running away. A topped off tank could give him 250 miles to travel.</p>
+				<p>Ch 28 page 282 “Winnipeg’s not such a bad place.”</p>
+				<p>Chapter 29, Page 287<br> “Two duck hunters lost their way in 1958, never to find it again, never to be found.”<br> This shows how it is very easy to get lost in the Lake of the Woods, so John and Kathy could have easily run away, and nobody would find them.</p>
+				<p>Chapter 29, Page 287<br>“The nearest city is Winnipeg, 122 miles to the west. The nearest bus station is in Roseau, 47 miles to the southwest. The nearest full-time law enforcement officer is in Baudette, the county seat, a 90 mile plane ride over the Lake of the Woods.”<br>This shows how there is not much of anything in The Lake of the Woods, but if they wanted to run away together they could go to the bus station or go to the nearest city.</p>
 			</div>
 		</td></tr>
 		<tr><td class="genericNew" id="evidence" onclick="toggle('evidence')">
 			<h2>Why they wanted to run away</h2>
 			<div class="expandable">
-				<p>Page265 [B. Tavern’s] longing to vanish, in death, without a trace and to return to the elements from which he came echoes his lifelong hunger for anonymity, for disappearing without a name, or with a fictitious name, so that his true identity would be lost forever. The life of a pseudonym is the life of a dead man, of one who does not exist. - Karl S. Guthke (B. Tavern) 
-John wanted to vanish he ran away disappearing leaving everything behind out of the blue. He did not want to exist after he lost the election. 
-</p></div>
+				<p>Page265 [B. Tavern’s] longing to vanish, in death, without a trace and to return to the elements from which he came echoes his lifelong hunger for anonymity, for disappearing without a name, or with a fictitious name, so that his true identity would be lost forever. The life of a pseudonym is the life of a dead man, of one who does not exist. - Karl S. Guthke (B. Tavern)<br>John wanted to vanish he ran away disappearing leaving everything behind out of the blue. He did not want to exist after he lost the election.</p>
+				<p></p>
+				<p></p>
+				<p></p><p></p>
+			</div>
 		</td><td class="genericNew" id="people" onclick="toggle('people')">
 			<h2>people were in on it</h2>
 			<div class="expandable">
-				<p>Page265 [B. Tavern’s] longing to vanish, in death, without a trace and to return to the elements from which he came echoes his lifelong hunger for anonymity, for disappearing without a name, or with a fictitious name, so that his true identity would be lost forever. The life of a pseudonym is the life of a dead man, of one who does not exist. - Karl S. Guthke (B. Tavern) 
-John wanted to vanish he ran away disappearing leaving everything behind out of the blue. He did not want to exist after he lost the election. 
-</p></div>
+				<p>Ch28 page 279. Claude gives John a radio, a nice boat, and a note suggesting that he should run away.  It seems like Claude was in on his plan.  “There’s plenty of space up there to evaporate.  It’s worth some thought.”</p>
+				<p>Ch28 page 281 “Just so you know, Lux and company are probably monitoring this, so if you don’t want nobody to… See what I mean?” - Claude</p>
+				<p>Chapter 30, Page 295: “They’re gone and they’re not coming back. Both of them. I mean, honestly, some things you best walk away from, just shrug and say say, Who knows? I’m serious.” (Ruth Rasmussen) Ruth says “both of them”, they could have told Ruth where they are going and that they aren’t ever coming back.</p>
+			</div>
 		</td>
 	</table>
 	</body>
