--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -37,9 +37,10 @@
 			<h2>Why they wanted to run away</h2>
 			<div class="expandable">
 				<p>Page265 [B. Tavern’s] longing to vanish, in death, without a trace and to return to the elements from which he came echoes his lifelong hunger for anonymity, for disappearing without a name, or with a fictitious name, so that his true identity would be lost forever. The life of a pseudonym is the life of a dead man, of one who does not exist. - Karl S. Guthke (B. Tavern)<br>John wanted to vanish he ran away disappearing leaving everything behind out of the blue. He did not want to exist after he lost the election.</p>
-				<p></p>
-				<p></p>
-				<p></p><p></p>
+				<p>Ch28 page 280 “No objective but to lose himself and stay lost.” “Despite everything, his mood was curiously festive, his morale high, and it occurred to him that happiness itself was subject to relativity.  He took out his bottle and sang ‘I’ll be Home for Christmas,’”.  John seems like he is determined and has some sort of plan.</p>
+				<p>Chapter 30, Page 290: <br>“There was one clue, I guess… Kathy was getting ready to head up north, and so naturally I asked when she’d be back in the office. Like a general date, I meant. Anyway, she goes over to this window. She looks out for a while and finally starts to laugh, except it wasn’t real laughing. Like she knew something” (Bethany Kee) <br>-Kathy was going north and seemed suspicious about it, hiding something from her.</p>
+				<p>Chapter 30, Page 296: “I’m not in the guessing game, I’ll lay out some basic facts. Number one, they were in debt up to their necks. Number two, there wasn’t a dime left in their bank account. Cleaned out slick as a whistle even before they headed up north. Number three, nobody ever found either boat. Not a single scrap, no oars, no life vests... Number whatever, Kathy had her own history. The dentist of hers, the way she used to take off now and then... Maybe she finally did it. Maybe they both had it rigged up all along. When you think about it, they didn’t have a damn thing to come back to- reputation shot, no career, bills up the gazoo.” (Anthony L. (Tony) Carbo)</p>
+				<p>“Just like those two weirdo snakes I mentioned.  One plus one equals zero!”</p>
 			</div>
 		</td><td class="genericNew" id="people" onclick="toggle('people')">
 			<h2>people were in on it</h2>
