--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -11,7 +11,7 @@
 	<span id="versionCode"></span>
 	<h1>List of Quotes in <i>In the Lake of the Woods</i></h1>
 	<table id="grid">
-		<tr><td class="genericNew" id="magic" onclick="toggle('magic')">
+		<tr><td class="generic" id="magic" onclick="toggle('magic')">
 			<h2>He's a sorcerer; he knows how to disappear</h2>
 			<div class="expandable">
 				<p>Chapter 24 page 262: Exhibit Eight: john wades box of tricks: Invisible ink john could have wrote notes to people saying what was going to happen. he could have told kathy to meet her at this place at this time.</p>
@@ -21,7 +21,7 @@
 				<p>Chapter 30 Page 296:...Number four, the man was a magician. Tried to wipe his name off the Charlie Company rolls, tried to vanish himself and damn near did it...(Anthony L. (Tony) Carbo)</p>
 				<p>Ch12 page 97 “In every trick there are two carefully thought out lines-the way it looks and the way it is.  The success of your work depends upon your understanding the relationship of these lines.” -Robert Parrish (The Magician’s Handbook)</p>
 			</td>
-		</td><td class="genericNew" id="details" onclick="toggle('details')">
+		</td><td class="generic" id="details" onclick="toggle('details')">
 			<h2>Details on how they could have disappeared</h2>
 			<div class="expandable">
 				<p>Chapter 31:(Page 301)  Maybe they wrapped themselves in blankets and fell asleep and woke up happy, and maybe in the morning they set a bearing north toward Kenora, or west toward Winnipeg, where they would have ditched the Chris Craft and made their way on foot to a bus station or to a small private airport</p>
@@ -33,7 +33,7 @@
 				<p>Chapter 29, Page 287<br>“The nearest city is Winnipeg, 122 miles to the west. The nearest bus station is in Roseau, 47 miles to the southwest. The nearest full-time law enforcement officer is in Baudette, the county seat, a 90 mile plane ride over the Lake of the Woods.”<br>This shows how there is not much of anything in The Lake of the Woods, but if they wanted to run away together they could go to the bus station or go to the nearest city.</p>
 			</div>
 		</td></tr>
-		<tr><td class="genericNew" id="evidence" onclick="toggle('evidence')">
+		<tr><td class="generic" id="evidence" onclick="toggle('evidence')">
 			<h2>Why they wanted to run away</h2>
 			<div class="expandable">
 				<p>Page265 [B. Tavern’s] longing to vanish, in death, without a trace and to return to the elements from which he came echoes his lifelong hunger for anonymity, for disappearing without a name, or with a fictitious name, so that his true identity would be lost forever. The life of a pseudonym is the life of a dead man, of one who does not exist. - Karl S. Guthke (B. Tavern)<br>John wanted to vanish he ran away disappearing leaving everything behind out of the blue. He did not want to exist after he lost the election.</p>
@@ -42,7 +42,7 @@
 				<p>Chapter 30, Page 296: “I’m not in the guessing game, I’ll lay out some basic facts. Number one, they were in debt up to their necks. Number two, there wasn’t a dime left in their bank account. Cleaned out slick as a whistle even before they headed up north. Number three, nobody ever found either boat. Not a single scrap, no oars, no life vests... Number whatever, Kathy had her own history. The dentist of hers, the way she used to take off now and then... Maybe she finally did it. Maybe they both had it rigged up all along. When you think about it, they didn’t have a damn thing to come back to- reputation shot, no career, bills up the gazoo.” (Anthony L. (Tony) Carbo)</p>
 				<p>“Just like those two weirdo snakes I mentioned.  One plus one equals zero!”</p>
 			</div>
-		</td><td class="genericNew" id="people" onclick="toggle('people')">
+		</td><td class="generic" id="people" onclick="toggle('people')">
 			<h2>people were in on it</h2>
 			<div class="expandable">
 				<p>Ch28 page 279. Claude gives John a radio, a nice boat, and a note suggesting that he should run away.  It seems like Claude was in on his plan.  “There’s plenty of space up there to evaporate.  It’s worth some thought.”</p>
