--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="version.js"></script>
 	</head>
 	<body onload="setVersion();setupQuotes()">
+	<div id="overlay">
 	<span id="versionCode"></span>
 	<h1>List of Quotes in <i>In the Lake of the Woods</i></h1>
 	<table id="grid">
@@ -50,5 +51,6 @@
 			</div>
 		</td>
 	</table>
+	</div>
 	</body>
 </html>
