--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -42,7 +42,7 @@
 				<p>“Just like those two weirdo snakes I mentioned. One plus one equals zero!”</p>
 			</div>
 		</td><td class="generic" id="people" onclick="toggle('people')">
-			<h2>people were in on it</h2>
+			<h2>People were in on it</h2>
 			<div class="expandable">
 				<p>Chapter 28 Page 279: “There’s plenty of space up there to evaporate.  It’s worth some thought.”<br> Claude gives John a radio, a nice boat, and a note suggesting that he should run away. It seems like Claude was in on his plan.</p>
 				<p>Chapter 28 Page 281 “Just so you know, Lux and company are probably monitoring this, so if you don’t want nobody to… See what I mean?” -Claude</p>
