--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -49,6 +49,14 @@
 				<p>Chapter 30 Page 295: “They’re gone and they’re not coming back. Both of them. I mean, honestly, some things you best walk away from, just shrug and say say, Who knows? I’m serious.” (Ruth Rasmussen)<br> Ruth says “both of them”, they could have told Ruth where they are going and that they aren’t ever coming back.</p>
 			</div>
 		</td>
+		<tr><td class="generic" id="closing" onclick="toggle('closing')" colspan='2'>
+			<h2>Closing Statements</h2>
+			<div class="expandable">
+				<p>Chapter 31 Page 299: “Are we so cynical, so sophisticated as to write off even the chance of a happy ending?”</p>
+				<p>Chapter 31 Page 299: “Does happiness strain credibility? Is there something in the human spirit that distrusts its own appetites, its own yearning for healing and contentment? Can we not believe that two adults, in love, might resolve to make their own miracle?”</p>
+				<p>Chapter 31 Page 300: “Finally it’s a matter of taste, or aesthetics, and the boil is one possibility that I must reject as both graceless and disgusting. Besides, there’s the weight of evidence.  He was crazy about her.”</p>
+			</div>
+		</td></tr>
 	</table>
 	</body>
 </html>
