--- a/ListOfQuotes.html
+++ b/ListOfQuotes.html
@@ -50,7 +50,7 @@
 			</div>
 		</td>
 		<tr><td class="generic" id="closing" onclick="toggle('closing')" colspan='2'>
-			<h2>Closing Statements</h2>
+			<h2>Closing Statement</h2>
 			<div class="expandable">
 				<p>Chapter 31 Page 299: “Are we so cynical, so sophisticated as to write off even the chance of a happy ending?”</p>
 				<p>Chapter 31 Page 299: “Does happiness strain credibility? Is there something in the human spirit that distrusts its own appetites, its own yearning for healing and contentment? Can we not believe that two adults, in love, might resolve to make their own miracle?”</p>
